[project]
name = "your-opps-bot"
version = "1.0.0"
description = "Daily DSA Discord bot with Cloudflare Workers cron support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]